@@ -1,0 +1,11 @@
+{
+  "timestamp" : "2022-04-03T08:24:43Z",
+  "count" : 6,
+  "count_minmax" : [ 6, 6 ],
+  "count_prev_day_inc" : 6,
+  "count_prev_day_dec" : 0,
+  "uniques" : 4,
+  "uniques_minmax" : [ 4, 4 ],
+  "uniques_prev_day_inc" : 4,
+  "uniques_prev_day_dec" : 0
+}
