@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2022-04-01T08:26:55Z",
+  "timestamp" : "2022-04-03T08:24:43Z",
   "count_outdated" : 403,
   "uniques_outdated" : 217,
-  "count" : 417,
-  "uniques" : 225,
+  "count" : 423,
+  "uniques" : 229,
   "clones" : [
     {
       "timestamp": "2022-03-22T00:00:00Z",
@@ -53,6 +53,13 @@
       "count_minmax": [ 2, 2 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
+    },
+    {
+      "timestamp": "2022-04-03T00:00:00Z",
+      "count": 6,
+      "count_minmax": [ 6, 6 ],
+      "uniques": 4,
+      "uniques_minmax": [ 4, 4 ]
     }
   ]
 }
