@@ -1,6 +1,6 @@
 {
-  "count": 14,
-  "uniques": 4,
+  "count": 20,
+  "uniques": 8,
   "clones": [
     {
       "timestamp": "2022-03-22T00:00:00Z",
@@ -36,6 +36,11 @@
       "timestamp": "2022-04-01T00:00:00Z",
       "count": 2,
       "uniques": 1
+    },
+    {
+      "timestamp": "2022-04-03T00:00:00Z",
+      "count": 6,
+      "uniques": 4
     }
   ]
 }
